# Omnilector

./: .dockerignore  .gitignore  .prodignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  encode.py  pyproject.toml  websocket_test.html  websocketold.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
documentation/: API_REFERENCE.md  DOCS_INDEX.md  DOCUMENTATION.md  FRONTEND_GUIDE.md  QUICKSTART.md
src/futurion_barcode/: __init__.py  main.py
src/futurion_barcode/models/responses/: websocket.py
src/futurion_barcode/routes/: __init__.py
src/futurion_barcode/routes/v1/: __init__.py  image.py  realtime.py
src/futurion_barcode/utils/: barcode.py  image.py  websocket.py
src/omnilector/: __init__.py  main.py
src/omnilector/models/responses/: barcode.py  websocket.py
src/omnilector/routes/v1/: __init__.py  image.py  realtime.py
src/omnilector/utils/: image.py  websocket.py
