[project]
name = "omnilector"
version = "1.0.0"
description = "API de detección y decodificación de códigos de barras y códigos QR en tiempo real"
readme = "README.md"
authors = [
    { name = "Futurion Partners" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pillow>=12.0.0",
    "pyzbar>=0.1.9",
    "zxing-cpp>=3.0.0",
]

[project.scripts]
omnilector = "omnilector:main"
omnilector-dev = "omnilector:reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
